0.4.0alpha:
- Made compatible with the latest McJtyLib (3.0.0)